Overflow styles fixed

--- a/src/Resources/app/administration/src/module/sw-cms/blocks/structuring/row/component/sw-cms-block-row.scss
+++ b/src/Resources/app/administration/src/module/sw-cms/blocks/structuring/row/component/sw-cms-block-row.scss
@@ -3,6 +3,7 @@
 .sw-cms-block-row {
     display: flex;
     gap: 40px;
+    padding: 1px;
 
     // For mobile view
     .is--mobile &{
